Updates for registration & Login form

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,11 @@
 .header{
-    padding:0.6250em;
-    border: #1c5069;
-    background:#1c5069;
-    color: #fff;
+    padding: 0.6250em;
+    // border: #1c5069;
+    // background:#1c5069;
+    // color: #fff;
+    border:  var(--background-tertiary);
+    background:  var(--background-tertiary);
+    color: var(--foreground-quaternary);
     display: grid;
     grid-template-columns: 90% 10%;
 
