--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -36,9 +36,9 @@
             </div>
           </div>
             <div class="btn-box">
-                <button class="btn">
+                <foodie-button class="btn">
                     Register
-                </button>
+                </foodie-button>
                 <div class="btn">
                   <a routerLink="/login" class="btn-link">Cancel</a>
                 </div>
