--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,4 +1,18 @@
 .wrapper{
   display: grid;
+  .wrapper-section{
+    padding: 30px;
+    .container{
+      width: 100%;
+      display: inline-grid;
+      grid-template-columns: auto auto auto auto;
+      grid-row-gap: 20px;
+
+      .item-container{
+        height: 400px;
+        width: 40%;
+      }
+    }
+  }
 }
 
