--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -36,8 +36,7 @@
             </div>
           </div>
             <div class="btn-box">
-                <foodie-button class="btn">
-                    Register
+                <foodie-button class="btn" title="Register">
                 </foodie-button>
                 <div class="btn">
                   <a routerLink="/login" class="btn-link">Cancel</a>
