--- a/src/app/components/dashboard/products/card/card.component.html
+++ b/src/app/components/dashboard/products/card/card.component.html
@@ -7,7 +7,7 @@
     </p>
   </div>
   <div class="btn-wrapper">
-    <app-button  title="Edit" (click)="edit(product.id)"></app-button >
-    <app-button  title="Delete" (click)="deleteProduct(product.id)"></app-button>
+    <foodie-button  title="Edit" (click)="edit(product.id)"></foodie-button >
+    <foodie-button  title="Delete" (click)="deleteProduct(product.id)"></foodie-button>
   </div>
 </div>
