--- a/src/app/components/dashboard/products/edit-products/edit-products.component.html
+++ b/src/app/components/dashboard/products/edit-products/edit-products.component.html
@@ -27,8 +27,8 @@
 
     </form>
         <div class="btn-wrapper">
-            <foodie-button  title = "Edit Product" (click)= "editProduct()"></foodie-button >
-            <foodie-button  title = "Cancel" (click)= "Cancel()"></foodie-button>
+            <foodie-button  title = "Edit Product" (click)= "editProduct()" aria-label="Edit Product"></foodie-button >
+            <foodie-button  title = "Cancel" (click)= "Cancel()" aria-label="Cancel"></foodie-button>
         </div>
     </div>
 </div>
