--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,29 +1,33 @@
 <div class="login-wrapper">
   <div class="login">
-    <h2 class="header login-margin">Log in</h2>
-    <form [formGroup]="authForm" class="container" (ngSubmit)="onSubmit()">
-      <div class="top-space">
-        <div [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">
-          <input type="email" placeholder="Email" formControlName="email">
+    <header>
+      <h2 class="header login-margin">Log in</h2>
+    </header>
+    <main>
+      <form [formGroup]="authForm" class="container" (ngSubmit)="onSubmit()">
+        <div class="top-space">
+          <div [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">
+            <input type="email" placeholder="Email" formControlName="email">
+          </div>
+          <div *ngIf="isSubmitted && formControls.email.errors" class="error-block">
+            <div *ngIf="formControls.email.errors.required">Email is required</div>
+          </div>
         </div>
-        <div *ngIf="isSubmitted && formControls.email.errors" class="error-block">
-          <div *ngIf="formControls.email.errors.required">Email is required</div>
+        <div class="top-space">
+          <div [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
+            <input type="password" placeholder="Password" formControlName="password">
+          </div>
+          <div *ngIf="isSubmitted && formControls.password.errors" class="error-block">
+            <div *ngIf="formControls.password.errors.required">Password is required</div>
+          </div>
         </div>
-      </div>
-      <div class="top-space">
-        <div [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
-          <input type="password" placeholder="Password" formControlName="password">
+        <div class="submit-btn">
+          <input type="submit" value="Log in">
         </div>
-        <div *ngIf="isSubmitted && formControls.password.errors" class="error-block">
-          <div *ngIf="formControls.password.errors.required">Password is required</div>
+        <div class="register-link">
+            <a routerLink="/register" class="btn btn-link">New user? Click here to Register</a>
         </div>
-      </div>
-      <div class="submit-btn">
-        <input type="submit" value="Log in">
-      </div>
-      <div class="register-link">
-          <a routerLink="/register" class="btn btn-link">New user? Click here to Register</a>
-      </div>
-    </form>
+      </form>
+    </main>
   </div>
 </div>
