--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
         <form [formGroup]="authForm" class="container" (ngSubmit)="onSubmit()">
           <div class="top-space">
             <div [ngClass]="{ 'has-error': isSubmitted && formControls.firstName.errors }">
-              <input type="text" placeholder="First Name" formControlName="firstName">
+              <input type="text" placeholder="firstName" formControlName="firstName">
             </div>
             <div *ngIf="isSubmitted && formControls.firstName.errors" class="error-block">
               <div *ngIf="formControls.firstName.errors.required">First Name is required</div>
@@ -13,18 +13,18 @@
           </div>
           <div class="top-space">
             <div [ngClass]="{ 'has-error': isSubmitted && formControls.lastName.errors }">
-              <input type="text" placeholder="Last Name" formControlName="lastName">
+              <input type="text" placeholder="lastName" formControlName="lastName">
             </div>
             <div *ngIf="isSubmitted && formControls.lastName.errors" class="error-block">
               <div *ngIf="formControls.lastName.errors.required">Last Name is required</div>
             </div>
           </div>
           <div class="form-group top-space">
-            <div [ngClass]="{ 'has-error': isSubmitted && formControls.username.errors }">
-              <input type="text" placeholder="User Name" formControlName="username">
+            <div [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">
+              <input type="email" placeholder="email" formControlName="email">
             </div>
-            <div *ngIf="isSubmitted && formControls.username.errors" class="error-block">
-              <div *ngIf="formControls.username.errors.required">User Name is required</div>
+            <div *ngIf="isSubmitted && formControls.email.errors" class="error-block">
+              <div *ngIf="formControls.email.errors.required">User Name is required</div>
             </div>
           </div>
           <div class="top-space">
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="btn-box">
-            <button class="btn" tabindex="0" aria-label="Register">Register</button>
+            <button class="btn" aria-label="Register" (click)="onSubmit()">Register</button>
             <div class="btn">
               <a routerLink="/login" class="btn-link" aria-label="Cancel" role="button">Cancel</a>
             </div>
