--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -6,6 +6,7 @@
   .register {
     width: 400px;
     height: 450px;
+    border-radius: 4px;
     margin: 1em auto;
     padding: 1em 1.5em;
     font-size: 1.40rem;
@@ -71,7 +72,7 @@
 
     input[type="firstName"],
     input[type="lastName"],
-    input[type="userName"],
+    input[type="email"],
     input[type="password"] {
       background: #fff;
       border-color: #bbb;
@@ -104,7 +105,7 @@
 
     .has-error input[type="firstName"],
     .has-error input[type="lastName"],
-    .has-error input[type="userName"]
+    .has-error input[type="email"]
     .has-error input[type="password"] {
         border:2px solid rgb(216, 12, 12);
         color: rgb(230, 14, 14);
