Update for readme file

--- a/src/app/components/dashboard/products/add-product/add-product.component.html
+++ b/src/app/components/dashboard/products/add-product/add-product.component.html
@@ -4,10 +4,10 @@
       <h3>Add Product</h3>
     </header>
     <form [formGroup]="addProductForm">
-      <div class="input-wrapper">
+      <!-- <div class="input-wrapper">
         <label for="username">id</label>
         <input type="text" placeholder="Enter unique id" formControlName="id" />
-      </div>
+      </div> -->
       <div class="input-wrapper">
         <label for="heading">heading</label>
         <input
