--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,6 +9,7 @@
     h1{
       text-align: center;
       margin: 0.22em 0.625em;
+      padding-left: 275px;
     }
     button{
       background: transparent;
