--- a/src/app/components/dashboard/products/card/card.component.scss
+++ b/src/app/components/dashboard/products/card/card.component.scss
@@ -16,6 +16,8 @@
 
     .info{
       padding: 1em 1.5em 2em;
+      min-height: 160px;
+      max-height: 160px;
       color: var(--text-color);
       p{
         margin-top: 1em;
