--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -29,3 +29,12 @@
       }
     }
   }
+  // css for tab view
+  @media only screen and (min-width: 600px){
+    .header{
+      grid-template-columns: 65% 35%;
+      h1{
+        padding-left: 200px;
+      }
+    }
+  }
