--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,7 @@ html {
         top: 0;
         left: 0;
         right: 0;
+        width: 100vw;
         height: 100vh;
         background-color: var(--bg-shadow);
         display: flex;
@@ -70,9 +71,9 @@ html {
         }
       }
 
-      // css for desktop view
-      @media (min-width: 600px) {
+       // css for desktop view
+      @media (max-width: 600px) {
         .modal-wrapper {
-          width: 100vw;
+          height: 125vh;
         }
       }
