--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -23,14 +23,14 @@
       }
     }
     // css for desktop view
-    @media (min-width: 600px) {
+    @media (min-width: 1100px) {
       h1{
         padding-left: 275px;
       }
     }
   }
   // css for tab view
-  @media only screen and (min-width: 600px){
+  @media only screen and (min-width: 600px) and (max-width: 1100px){
     .header{
       grid-template-columns: 65% 35%;
       h1{
