--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
       <foodie-button title="Add Product" (click)="addProduct()" aria-label="Add Product"></foodie-button>
       <foodie-button [title]="theme" (click)='changeTheme()' aria-label="Theme"></foodie-button>
       <button (click)="logout()" title= "logout">
-        <img src='../../assets/images/logout.png'>
+        <img src='../../assets/images/logout.png' alt="logout">
       </button>
     </div>
   </div>
