--- a/src/app/components/dashboard/products/edit-products/edit-products.component.html
+++ b/src/app/components/dashboard/products/edit-products/edit-products.component.html
@@ -1,28 +1,21 @@
 <div class="modal-wrapper">
   <div class="modal-body">
     <header class="heading">
-        <h1>Edit Product</h1>
+        <h1>{{'product-operations.edit-product-text' | translate}}</h1>
     </header>
     <form [formGroup]="editProductForm">
-      <!-- <div class="input-wrapper">
-          <label for="id">id</label>
-          <input type="text" placeholder="Enter unique id" formControlName="id" aria-label="Edit Id">
-      </div> -->
       <div class="input-wrapper">
-          <label for="heading">heading</label>
-          <input type="text" placeholder="Enter Heading" formControlName="heading" aria-label="Edit heading">
+          <input type="text" placeholder="{{'product-operations.heading-text' | translate}}" formControlName="heading" aria-label="Edit heading">
       </div>
       <div class="input-wrapper">
-          <label for="description">description</label>
-          <input type="text" placeholder="Enter description" formControlName="description" aria-label="Edit description">
+          <input type="text" placeholder="{{'product-operations.description-text' | translate}}" formControlName="description" aria-label="Edit description">
       </div>
       <div class="input-wrapper">
-          <label for="imageUrl">imageUrl</label>
-          <input type="text" placeholder="Enter imageUrl" formControlName="imageUrl" aria-label="Edit imageUrl">
+          <input type="text" placeholder="{{'product-operations.imageUrl-text' | translate}}" formControlName="imageUrl" aria-label="Edit imageUrl">
       </div>
     </form>
     <div class="btn-wrapper">
-      <foodie-button  title = "Edit Product" (click)= "editProduct()" aria-label="Edit Product"></foodie-button >
+      <foodie-button  title = "{{'product-operations.update-button' | translate}}" (click)= "editProduct()" aria-label="Update Product"></foodie-button >
       <foodie-button  title = "Cancel" (click)= "Cancel()" aria-label="Cancel"></foodie-button>
     </div>
   </div>
