--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,10 +4,11 @@
     background:  var(--background-tertiary);
     color: var(--foreground-quaternary);
     display: grid;
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 80% 20%;
 
-    h1{
+    .header-wrapper{
       text-align: center;
+      display: flex;
       margin: 0 0.625em;
     }
     button{
@@ -25,7 +26,7 @@
     // css for desktop view
     @media (min-width: 1100px) {
       h1{
-        padding-left: 275px;
+        padding-left: 385px;
       }
     }
   }
@@ -34,7 +35,16 @@
     .header{
       grid-template-columns: 65% 35%;
       h1{
-        padding-left: 200px;
+        padding-left: 125px;
+      }
+    }
+  }
+   // css for mobile view
+  @media only screen and (max-width: 600px){
+    .header{
+      grid-template-columns: 70% 30%;
+      h1{
+        padding-left: 15px;
       }
     }
   }
