--- a/src/app/components/dashboard/products/card/card.component.html
+++ b/src/app/components/dashboard/products/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-  <div class="class-wrapper">
+<div class="card" aria-label="View product details">
+  <div  class="class-wrapper" tabindex="0">
     <img src="{{product.imageUrl}}" alt="card image" />
     <div class="info">
       <h1>{{ product.heading }}</h1>
