--- a/src/app/theme/variable.scss
+++ b/src/app/theme/variable.scss
@@ -3,9 +3,9 @@
 
 :root {
   /* Colors */
-  --foreground-default: #08090a;
+  --foreground-default: #9c9c9d;
   --foreground-secondary: #41474d;
-  --foreground-tertiary: #797c80;
+  --foreground-tertiary: #808080a3;
   --foreground-quaternary: #f4faff;
   --foreground-light: #41474d;
 
