--- a/src/app/components/dashboard/products/card/card.component.scss
+++ b/src/app/components/dashboard/products/card/card.component.scss
@@ -4,7 +4,7 @@
   background-color: var(--white);
 
   .class-wrapper{
-    border:1px solid grey;
+    border:1px solid #808080a3;
     border-radius: 5px;
     margin: 0px 10px;
     img {
