--- a/src/app/components/dashboard/products/card/card.component.html
+++ b/src/app/components/dashboard/products/card/card.component.html
@@ -1,15 +1,15 @@
 <div class="card" aria-label="View product details">
-  <div  class="class-wrapper" tabindex="0">
-    <img src="{{product.imageUrl}}" alt="card image" />
-    <div class="info">
-      <h1>{{ product.heading }}</h1>
-      <p>
-        {{ product.description }}
-      </p>
-    </div>
-    <div class="btn-wrapper">
-      <foodie-button  title="{{'card.update-button' | translate}}" (click)="edit(product.id)" aria-label="Edit"></foodie-button >
-      <foodie-button  title="{{'card.delete-button' | translate}}" (click)="deleteProduct(product.id)" aria-label="Delete"></foodie-button>
-    </div>
-  </div>
+    <foodie-card class="class-wrapper" tabindex="0">
+      <foodie-img [src]="product.imageUrl" alt="card image"></foodie-img>
+      <div class="info">
+        <h1>{{ product.heading }}</h1>
+        <p>
+          {{ product.description }}
+        </p>
+      </div>
+      <div class="btn-wrapper">
+        <foodie-button  title="{{'card.update-button' | translate}}" (click)="edit(product.id)" aria-label="Edit"></foodie-button >
+        <foodie-button  title="{{'card.delete-button' | translate}}" (click)="deleteProduct(product.id)" aria-label="Delete"></foodie-button>
+      </div>
+  </foodie-card>
 </div>
