--- a/src/app/theme/variable.scss
+++ b/src/app/theme/variable.scss
@@ -21,6 +21,7 @@
   --error-default: #ef3e36;
   --error-dark: #800600;
   --error-light: #ffcecc;
+  --border: #808080a3;
 
   /* Shadows */
   --background-tertiary-shadow: 0 1px 3px 0 rgba(92, 125, 153, 0.5);
